--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
@@ -28,3 +28,7 @@ AnnotationLocation.allowSamelineSingleParameterlessAnnotation = whether to allow
 AnnotationLocation.allowSamelineParameterizedAnnotation = whether to allow parameterized annotations to be located on the same line as target element.
 AnnotationLocation.allowSamelineMultipleAnnotations = whether to allow annotation multiple annotations to be located on the same line
 AnnotationLocation.tokens = tokens to check
+
+AnnotationOnSameLine.name = Annotation On Same Line
+AnnotationOnSameLine.desc = The check does verifying that annotations are located on the same line with their targets. Verifying with this check is not good practice, but it is using by some style guides.
+AnnotationOnSameLine.tokens = tokens to check
