--- a/net.sf.eclipsecs.checkstyle/.classpath
+++ b/net.sf.eclipsecs.checkstyle/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="checkstyle-8.5-all.jar" sourcepath="checkstyle-8.5-src.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="metadata"/>
+	<classpathentry kind="src" path="metadata/"/>
+	<classpathentry exported="true" kind="lib" path="checkstyle-8.5-all.jar" sourcepath="checkstyle-8.5-src.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
