--- a/net.sf.eclipsecs.doc/pom.xml
+++ b/net.sf.eclipsecs.doc/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>net.sf.eclipsecs.parent</artifactId>
         <groupId>net.sf.eclipsecs</groupId>
-        <version>8.0.0-SNAPSHOT</version>
+        <version>8.5.0-SNAPSHOT</version>
         <relativePath>../net.sf.eclipsecs.parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>3.0.0</version>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -29,7 +29,7 @@
 
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
+                <version>3.0.2</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -47,23 +47,24 @@
                                     <directory>src/main/resources</directory>
                                     <!-- Copy update-site files with filtering to replace version/timestamp -->
                                     <includes>
-                                        <include>update/**/*</include>
+                                        <include>update/**</include>
                                     </includes>
                                     <filtering>true</filtering>
                                 </resource>
                                 <resource>
                                     <directory>src/main/resources</directory>
-                                    <!-- Copy all the rest except update site files (see above) -->
+                                    Copy all the rest except update site files (see above)
                                     <includes>
                                         <include>**/*</include>
                                     </includes>
                                     <excludes>
-                                        <exclude>update/**/*</exclude>
+                                        <exclude>update/**</exclude>
                                     </excludes>
                                 </resource>
                             </resources>
                         </configuration>
                     </execution>
+
                     <execution>
                         <id>docs</id>
                         <phase>process-resources</phase>
@@ -75,7 +76,7 @@
                             <resources>
                                 <resource>
                                     <directory>src/main/resources</directory>
-                                    <!-- Copy all except *.html (xslt-transformed) and update site files (not needed) -->
+                                    Copy all except *.html (xslt-transformed) and update site files (not needed)
                                     <includes>
                                         <include>**/*</include>
                                     </includes>
