--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,4 +1,8 @@
-[ 
+[ {
+    "version": "Release 8.5.0",
+    "template": "partials/releases/8.5.0/release_notes.html",
+    "open": true
+  },
   {
     "version": "Release 8.0.0",
     "template": "partials/releases/8.0.0/release_notes.html",
@@ -11,8 +15,7 @@
   },
   {
     "version": "Release 7.3.0",
-    "template": "partials/releases/7.3.0/release_notes.html",
-    "open": true
+    "template": "partials/releases/7.3.0/release_notes.html"
   },
   {
     "version": "Release 7.2.0",
