--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.sf.eclipsecs</groupId>
     <artifactId>net.sf.eclipsecs.parent</artifactId>
-    <version>8.0.0-SNAPSHOT</version>
+    <version>8.5.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>net.sf.eclipsecs.parent</name>
 
@@ -20,8 +20,8 @@
     </modules>
 
     <properties>
-        <tycho-version>0.25.0</tycho-version>
-        <tycho-extras-version>0.25.0</tycho-extras-version>
+        <tycho-version>1.0.0</tycho-version>
+        <tycho-extras-version>1.0.0</tycho-extras-version>
         <tycho.scmUrl>scm:git://git.code.sf.net/p/eclipse-cs/git</tycho.scmUrl>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -104,11 +104,11 @@
                     <artifactId>tycho-p2-plugin</artifactId>
                     <version>${tycho-version}</version>
                     <configuration>
-                        <baselineRepositories>
-                            <repository>
-                                <url>git://git.code.sf.net/p/eclipse-cs/git</url>
-                            </repository>
-                        </baselineRepositories>
+<!--                         <baselineRepositories> -->
+<!--                             <repository> -->
+<!--                                 <url>git://git.code.sf.net/p/eclipse-cs/git</url> -->
+<!--                             </repository> -->
+<!--                         </baselineRepositories> -->
                     </configuration>
                     <executions>
                         <execution>
