Use Java 8 in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ cache:
   directories:
     - ~/.m2
 
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+    
 branches:
   only:
     - master
