--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
                 <plugin>
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>tycho-source-plugin</artifactId>
-                    <version>${tycho.version}</version>
+                    <version>${tycho-version}</version>
                     <configuration>
                         <strictSrcIncludes>false</strictSrcIncludes>
                     </configuration>
