typo in license folder
Renamed folder and adapted build.properties. Found no further references
of the folder name.

--- a/net.sf.eclipsecs.ui/build.properties
+++ b/net.sf.eclipsecs.ui/build.properties
@@ -1,5 +1,5 @@
 bin.includes = icons/,\
-               licencse/,\
+               license/,\
                plugin.xml,\
                schema/,\
                META-INF/,\
