--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.sf.eclipsecs</groupId>
     <artifactId>net.sf.eclipsecs.parent</artifactId>
-    <version>8.5.1-SNAPSHOT</version>
+    <version>8.7.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>eclipse-cs Maven Parent</name>
 
@@ -62,7 +62,7 @@
                         <artifact>
                             <groupId>net.sf.eclipsecs</groupId>
                             <artifactId>net.sf.eclipsecs.target</artifactId>
-                            <version>8.5.1-SNAPSHOT</version>
+                            <version>${project.version}</version>
                         </artifact>
                     </target>
                     <resolver>p2</resolver>
