--- a/net.sf.eclipsecs.core/.settings/org.eclipse.jdt.ui.prefs
+++ b/net.sf.eclipsecs.core/.settings/org.eclipse.jdt.ui.prefs
@@ -58,4 +58,5 @@ cleanup.use_type_arguments=false
 cleanup_profile=_eclipse-cs net.sf.eclipsecs.core
 cleanup_settings_version=2
 eclipse.preferences.version=1
+formatter_profile=_Checkstyle
 formatter_settings_version=13
