Change update site url to Github, add site verification for google indexer

--- a/net.sf.eclipsecs.doc/pom.xml
+++ b/net.sf.eclipsecs.doc/pom.xml
@@ -90,6 +90,7 @@
                                         <exclude>update/**</exclude>
                                         <exclude>sitemap.xml</exclude>
                                         <exclude>robots.txt</exclude>
+                                        <exclude>google*.html</exclude>
                                     </excludes>
                                 </resource>
                             </resources>
