Deploy update site and update site archive to bintray using "mvn deploy"

--- a/net.sf.eclipsecs-updatesite/pom.xml
+++ b/net.sf.eclipsecs-updatesite/pom.xml
@@ -9,4 +9,76 @@
     <artifactId>net.sf.eclipsecs-updatesite</artifactId>
     <packaging>eclipse-repository</packaging>
     <name>eclipse-cs Update Site</name>
+
+    <profiles>
+        <profile>
+            <id>bintray</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <configuration>
+                                    <target>
+                                        <copy todir="${project.build.directory}/archive/">
+                                            <fileset dir="${project.build.directory}">
+                                                <include name="net.sf.eclipsecs-updatesite_*.zip" />
+                                            </fileset>
+                                        </copy>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!-- Enable alternative deployer. -->
+                    <plugin>
+                        <groupId>com.carrotgarden.maven</groupId>
+                        <artifactId>bintray-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                            <subject>eclipse-cs</subject>
+                            <repository>eclipse-cs</repository>
+
+                            <!-- Put Bintray credentials in settings.xml. -->
+                            <serverId>bintray</serverId>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>upload-update-site</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>upload</goal>
+                                </goals>
+                                <configuration>
+                                    <bintrayPackage>update-site</bintrayPackage>
+                                    <bintrayVersion>${unqualifiedVersion}</bintrayVersion>
+                                    <sourceFolder>${project.build.directory}/repository/</sourceFolder>
+                                    <targetFolder>${unqualifiedVersion}</targetFolder>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>upload-update-site-archive</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>upload</goal>
+                                </goals>
+                                <configuration>
+                                    <bintrayPackage>update-site-archive</bintrayPackage>
+                                    <bintrayVersion>${unqualifiedVersion}</bintrayVersion>
+                                    <sourceFolder>${project.build.directory}/archive/</sourceFolder>
+                                    <targetFolder>update-site-archive</targetFolder>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
