--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,10 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.8</version>
+                </plugin>
+                <plugin>
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>tycho-packaging-plugin</artifactId>
                     <version>${tycho-version}</version>
@@ -167,6 +171,19 @@
                     <groupId>org.eclipse.tycho.extras</groupId>
                     <artifactId>tycho-source-feature-plugin</artifactId>
                     <version>${tycho-extras-version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.carrotgarden.maven</groupId>
+                    <artifactId>bintray-maven-plugin</artifactId>
+                    <version>1.1.20171202224405</version>
+                </plugin>
+                <!-- Disable default deployer. -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
