fix multiple extension declaration issues
* remove empty [...] sections, they are otherwise part of the generated
documentation
* replace link tags by code tags, since link tags lead to validation
errors and are not rendered
* use descriptive names for the extension points instead of repeating
their IDs
* fix the wrong occurrences of "filters" as extension point schema IDs.
* typos

None of these changes influences the extension point registry. All
relevant IDs are still the same as before, so extenders continue to work
without modification.

--- a/net.sf.eclipsecs.ui/plugin.xml
+++ b/net.sf.eclipsecs.ui/plugin.xml
@@ -17,7 +17,7 @@
     <!-- defines the extension point to contribute the ui part of check configuration types -->
     <extension-point
         id="configtypesui"
-        name="Configuration type editors"
+        name="Checkstyle configuration type editors"
         schema="schema/configtypesui.exsd"/>
 
     <!-- Filter editors for filters allowing user input -->
