--- a/net.sf.eclipsecs.core/plugin.xml
+++ b/net.sf.eclipsecs.core/plugin.xml
@@ -7,7 +7,7 @@
         schema="schema/checkstyleAddonProvider.exsd"/>
 
     <!-- defines the extension point to contribute custom configuration type. -->
-    <extension-point id="configurationtypes" name="Configuration types" schema="schema/configtypes.exsd"/>
+    <extension-point id="configurationtypes" name="Checkstyle configuration types" schema="schema/configtypes.exsd"/>
 
     <!-- defines the extension point to contribute default checkstyle configurations to the checkstyle plugin -->
     <extension-point id="configurations" name="Checkstyle configurations" schema="schema/configurations.exsd"/>
@@ -16,7 +16,7 @@
     <extension-point id="filters" name="Checkstyle filters" schema="schema/filters.exsd"/>
 
     <!-- defines the extension point to contribute custom configuration save filters -->
-    <extension-point id="saveFilters" name="Configuration save filters" schema="schema/saveFilters.exsd"/>
+    <extension-point id="saveFilters" name="Checkstyle configuration save filters" schema="schema/saveFilters.exsd"/>
 
     <extension id="CheckstyleBuilder" name="%CheckstyleBuilder.name" point="org.eclipse.core.resources.builders">
         <builder>
