--- a/net.sf.eclipsecs.checkstyle/.classpath
+++ b/net.sf.eclipsecs.checkstyle/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="metadata/"/>
-	<classpathentry exported="true" kind="lib" path="checkstyle-8.8-all.jar" sourcepath="checkstyle-8.8-src.zip"/>
+	<classpathentry exported="true" kind="lib" path="checkstyle-8.9-all.jar" sourcepath="checkstyle-checkstyle-8.9.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
