#70: upgrade to checkstyle core 8.10
* upgrade core library
* create release notes
* upgrade version numbers
* moved alert message of Lars out of each version, now on top of release
notes
* typo fixes in metadata
* packaged and updated documentation

There haven't been any changes in checkstyle/xdocs mentioning a newly
introduced config element since 8.6, so it seems safe to assume there
are no metadata changes.

--- a/docs/releases.json
+++ b/docs/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 8.10.0",
+    "template": "partials/releases/8.10.0/release_notes.html",
+    "open": true
+  }, 
+  {
     "version": "Release 8.8.0",
     "template": "partials/releases/8.8.0/release_notes.html",
     "open": true
@@ -16,8 +21,7 @@
   }, 
   {
     "version": "Release 8.5.0",
-    "template": "partials/releases/8.5.0/release_notes.html",
-    "open": true
+    "template": "partials/releases/8.5.0/release_notes.html"
   },
   {
     "version": "Release 8.0.0",
