--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -34,9 +34,9 @@ ExplicitInitialization.name = Explicit Initialization
 ExplicitInitialization.onlyObjectReferences = whether only explicit initializations made to null for objects should be checked
 
 FallThrough.checkLastCaseGroup = Whether we need to check last case group or not.
-FallThrough.desc               = Checks for fall through in switch  statements Finds locations where a <code>case</code> contains Java code - but lacks a <code>break, return, throw</code> or <code>continue</code> statement.<br/>\r\nThe check honores special comments to supress the warning. By default the text "fallthru", "fall through", "fallthrough", "falls through" and "fallsthrough" are recognized (case sensitive). The comment containing this words must be a one-liner and must be on the last none-empty line before the <code>case</code> triggering the warning or on the same line before the <code>case</code> (urgly, but possible).\r\n<pre>\r\nswitch (i){\r\ncase 0:\r\n    i++; // fall through\r\n\r\ncase 1:\r\n    i++;\r\n    // falls through\r\ncase 2: {\r\n    i++;\r\n}\r\n// fallthrough\r\ncase 3:\r\n    i++;\r\n/* fallthru */case 4:\r\n    i++\r\n    break;\r\n}\r\n</pre>\u0009\r\nNote: the check works in assumption that there is no unreachable code in the <code>case</code>.
+FallThrough.desc               = Checks for fall through in switch  statements Finds locations where a <code>case</code> contains Java code - but lacks a <code>break, return, throw</code> or <code>continue</code> statement.<br/>\r\nThe check honors special comments to supress the warning. By default the text "fallthru", "fall through", "fallthrough", "falls through" and "fallsthrough" are recognized (case sensitive). The comment containing this words must be a one-liner and must be on the last none-empty line before the <code>case</code> triggering the warning or on the same line before the <code>case</code> (urgly, but possible).\r\n<pre>\r\nswitch (i){\r\ncase 0:\r\n    i++; // fall through\r\n\r\ncase 1:\r\n    i++;\r\n    // falls through\r\ncase 2: {\r\n    i++;\r\n}\r\n// fallthrough\r\ncase 3:\r\n    i++;\r\n/* fallthru */case 4:\r\n    i++\r\n    break;\r\n}\r\n</pre>\u0009\r\nNote: the check works in assumption that there is no unreachable code in the <code>case</code>.
 FallThrough.name               = Fall Through
-FallThrough.reliefPattern      = Regular expression to match the relief comment that supresses the warning about a fall through.
+FallThrough.reliefPattern      = Regular expression to match the relief comment that suppresses the warning about a fall through.
 
 FinalLocalVariable.desc   = Checks that local variables that never have their values changed are declared final. The check can be configured to also check that unchanged parameters are declared final.<br/>\r\nWhen configured to check parameters, the check ignores parameters of interface methods and abstract methods.
 FinalLocalVariable.name   = Final Local Variable
@@ -56,7 +56,7 @@ IllegalCatch.desc              = Catching java.lang.Exception, java.lang.Error o
 IllegalCatch.illegalClassNames = exception class names to reject
 IllegalCatch.name              = Illegal Catch
 
-IllegalInstantiation.classes = Comma seperated list of classes that should not be instantiated.
+IllegalInstantiation.classes = Comma separated list of classes that should not be instantiated.
 IllegalInstantiation.desc    = Checks for illegal instantiations where a factory method is preferred.<br/>\r\nRationale: Depending on the project, for some classes it might be preferable to create instances through factory methods rather than calling the constructor.\r\n<p>\r\nA simple example is the java.lang.Boolean class. In order to save memory and CPU cycles, it is preferable to use the predefined constants <code>TRUE</code> and <code>FALSE</code>. Constructor invocations should be replaced by calls to <code>Boolean.valueOf()</code>.\r\n</p>\r\nSome extremely performance sensitive projects may require the use of factory methods for other classes as well, to enforce the usage of number caches or object pools.
 IllegalInstantiation.name    = Illegal Instantiation
 
@@ -102,7 +102,7 @@ MagicNumber.ignoreAnnotation = Ignore magic numbers in annotation declarations.
 MagicNumber.ignoreFieldDeclaration = Ignore magic numbers in field declarations.
 MagicNumber.constantWaiverParentToken = Token that are allowed in the AST path from the number literal to the enclosing constant definition.
 
-MissingCtor.desc = Checks that classes (except abtract one) define a ctor and don't rely on the default one.
+MissingCtor.desc = Checks that classes (except abstract one) define a constructor and don't rely on the default one.
 MissingCtor.name = Missing Constructor
 
 MissingSwitchDefault.desc = Checks that switch statement has "default" clause.<br/>\r\nRationale: It's usually a good idea to introduce a default case in every switch statement. Even if the developer is sure that all currently possible cases are covered, this should be expressed in the default branch, e.g. by using an assertion. This way the code is protected aginst later changes, e.g. introduction of new types in an enumeration type.
@@ -112,7 +112,7 @@ ModifiedControlVariable.desc = Check for ensuring that for loop control variable
 ModifiedControlVariable.name = Modified Control Variable
 ModifiedControlVariable.skipEnhancedForLoopVariable = Controls whether to check enhanced-for-loop variable.
 
-MultipleStringLiterals.allowedDuplicates       = The maximum number of occurences to allow without generating a warning
+MultipleStringLiterals.allowedDuplicates       = The maximum number of occurrences to allow without generating a warning
 MultipleStringLiterals.desc                    = Checks for multiple occurrences of the same string literal within a single file.<br/>\r\nRationale: Code duplication makes maintenance more difficult, so it can be better to replace the multiple occurrences with a constant.
 MultipleStringLiterals.ignoreOccurrenceContext = Token type names where duplicate strings are ignored even if they don't match ignoredStringsRegexp. This allows you to exclude syntactical contexts like Annotations or static initializers from the check.
 MultipleStringLiterals.ignoreStringsRegexp     = Regexp pattern for ignored strings (with quotation marks)
