--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
@@ -10,7 +10,7 @@ AvoidStaticImport.excludes = Allows for certain classes via a star notation to b
 AvoidStaticImport.name     = Avoid Static Imports
 
 IllegalImport.desc        = Checks for imports from a set of illegal packages. By default, the check rejects all <code>sun.*</code> packages since programs that contain direct calls to the sun.* packages are <a href="http://java.sun.com/products/jdk/faq/faq-sun-packages.html" target="_blank">not 100% Pure Java</a>. To reject other packages, set property <code>illegalPkgs</code> to a list of the illegal packages.
-IllegalImport.illegalPkgs = Comma (',') seperated list of illegal packages.
+IllegalImport.illegalPkgs = Comma (',') separated list of illegal packages.
 IllegalImport.name        = Illegal Imports
 IllegalImport.illegalClasses = Class names to reject, if regexp variable is not set, checks if import equals class name. If regexp variable is set, then list of class name will be interpreted as regular expressions. Note, all properties for match will be used.
 IllegalImport.regexp = Whether the <b>illegalPkgs</b> and <b>illegalClasses</b> should be interpreted as regular expressions
@@ -20,7 +20,7 @@ ImportControl.name = Import Control
 ImportControl.file = The location of the file containing the import control configuration. It can be a regular file, URL or resource path. It will try loading the path as a URL first, then as a file, and finally as a resource. 
 ImportControl.path = Regular expression of file paths to which this check should apply. Files that don't match the pattern will not be checked. The pattern will be matched against the full absolute file path. 
 
-ImportOrder.caseSensitive = whether strings comprision should be case sensitive or not
+ImportOrder.caseSensitive = whether String comparison should be case sensitive or not
 ImportOrder.desc          = Checks the ordering/grouping of imports. Ensures that groups of imports come in a specific order (e.g., java. comes first, javax. comes first, then everything else) and imports within each group are in lexicographic order. Static imports must be at the end of a group and in lexicographic order amongst themselves.
 ImportOrder.groups        = list of imports groups (every group identified by string it's started)
 ImportOrder.name          = Import Order Check
