remove sourceforge references
* rename bundle vendor from URL to Development Team
* update feature URL and branding to checkstyle.org
* reword feature description to avoid plenking

--- a/net.sf.eclipsecs-feature/feature.properties
+++ b/net.sf.eclipsecs-feature/feature.properties
@@ -1,12 +1,12 @@
 #Feature externalized strings
 
 feature.label = Eclipse Checkstyle Plug-in
-feature.provider_name = http://eclipse-cs.sf.net/
+feature.provider_name = Eclipse Checkstyle Plugin Development Team
 
 updateSiteName = Eclipse Checkstyle Plug-in Updates
 
 description.text = This feature integrates Checkstyle 8 into the Eclipse environment.
-description.url = http://eclipse-cs.sf.net/
+description.url = http://checkstyle.org/eclipse-cs/
 
 copyright.text =\
 Copyright (C) 2002-2016  David Schneider, Lars K\u00f6dderitzsch and others\n\
