--- a/net.sf.eclipsecs.branding/about.properties
+++ b/net.sf.eclipsecs.branding/about.properties
@@ -1,12 +1,12 @@
 aboutText=Eclipse Checkstyle Plugin {featureVersion}\n\
 \n\
 Checkstyle integration plugin for Eclipse, distributed under the terms of the GNU Lesser General Public License 2.1.\n\
-Check http://eclipse-cs.sf.net/ for updates, documentation and support.\n\
+Visit http://checkstyle.org/eclipse-cs/ for updates, documentation and support.\n\
 \n\
-(c) Copyright David Schneider, Lars K\u00f6dderitzsch and others, 2002-2014\n\
+(c) Copyright David Schneider, Lars K\u00f6dderitzsch and others, 2002-2018\n\
 This software includes the following 3rd-party libraries:\n\
-Checkstyle ( http://checkstyle.sf.net/ ), licensed under LGPL 2.1\n\
-Jakarta Commons Lang/IO ( http://commons.apache.org/ ), licensed under APL 2.0\n\
-DOM4J ( http://sourceforge.net/projects/dom4j/ ), licensed under BSD\n\
-iText ( http://itextpdf.com/ ), licensed under Affero General Public License\n\
-JFreeChart ( http://www.jfree.org/jfreechart/ ), licensed under LGPL 3
+Checkstyle, licensed under LGPL 2.1. Visit http://checkstyle.org/\n\
+Jakarta Commons Lang/IO, licensed under APL 2.0. Visit http://commons.apache.org/\n\
+DOM4J, licensed under BSD. Visit http://sourceforge.net/projects/dom4j/\n\
+iText, licensed under Affero General Public License. Visit http://itextpdf.com/\n\
+JFreeChart, licensed under LGPL 3. Visit http://www.jfree.org/jfreechart/
